--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -36,7 +36,7 @@
         <div class="dropdown-menu border-0" aria-labelledby="user-options">
             {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
-                    <a href="{% url 'account_logout' %}" class="dropdown-item">Add New Course</a>
+                    <a href="{% url 'course_create' %}" class="dropdown-item">Add New Course</a>
                 {% endif %}
                 <a href="{% url 'my_courses' %}" class="dropdown-item">My Courses</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
