--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -9,7 +9,9 @@
             <div class="row align-items-center">
                 <div class="col-12 col-md-6 mb-4 mb-md-0">
                     {% if course.image %}
-                        <img src="{{ course.image.url }}" alt="{{ course.title }}" class="img-fluid rounded mb-5 mt-5">
+                        <img src="{{ course.image.url }}" alt="{{ course.title }}" class="img-fluid rounded mb-5 mt-5" loading="lazy">
+                    {% else %}
+                        <img src="{{ MEDIA_URL }}noimage.jpg" alt="No image available" class="img-fluid rounded mb-5 mt-5" loading="lazy">
                     {% endif %}
                 </div>
                 <div class="col-12 col-md-6 text-center text-md-start">
