--- a/profiles/templates/profiles/my_courses.html
+++ b/profiles/templates/profiles/my_courses.html
@@ -23,7 +23,7 @@
                             <img src="{{ course.image.url }}" class="card-img-top" alt="{{ course.title }}">
                         {% endif %}
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">{{ course.title }}</h5>
+                            <a href="{% url 'course_detail' course.id %}"><h5 class="card-title">{{ course.title }}</h5></a>
                             <p class="card-text py-3"><strong><i class="fa-solid fa-calendar me-2"></i> Training Duration: </strong>{{ course.get_time_frame_display }}</p>
                             <p class="card-text">{{ course.description }}</p>
                             
