Move and customize allauth templates, style login, logout & signup templates

--- a/bundles/templates/bundles/bundles.html
+++ b/bundles/templates/bundles/bundles.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     {% for bundle in bundles %}
                         <div class="col-sm-12 col-md-6 col-lg-4 pb-5">
-                            <div class="card h-100">
+                            <div class="card bundles-cards h-100">
                                 {% if bundle.image %}
                                     <img src="{{ bundle.image.url }}" class="card-img-top-bundles" alt="{{ bundle.title }}" loading="lazy">
                                 {% else %}
