--- a/courses/templates/courses/courses.html
+++ b/courses/templates/courses/courses.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     {% for course in courses %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 pb-4">
-                            <div class="card h-100">
+                            <div class="card courses-cards h-100">
                                 {% if course.image %}
                                 <a href="{% url 'course_detail' course.id %}">
                                     <img src="{{ course.image.url }}" class="card-img-top-courses" alt="{{ course.title }}" loading="lazy">
