--- a/courses/templates/courses/courses.html
+++ b/courses/templates/courses/courses.html
@@ -36,7 +36,7 @@
                                 </a>
                                 {% else %}
                                 <a href="{% url 'course_detail' course.id %}">
-                                    <img src="{{ MEDIA_URL }}noimage.jpg" class="card-img-top-courses" alt="No image available" loading="lazy">
+                                    <img src="{{ MEDIA_URL }}{% static 'images/noimage.jpg' %}" class="card-img-top-courses" alt="No image available" loading="lazy">
                                 </a>
                                 {% endif %}
                                 <div class="card-body">
