--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -11,7 +11,7 @@
                     {% if course.image %}
                         <img src="{{ course.image.url }}" alt="{{ course.title }}" class="img-fluid rounded mb-5 mt-5" loading="lazy">
                     {% else %}
-                        <img src="{{ MEDIA_URL }}{% static 'images/noimage.jpg' %}" alt="No image available" class="img-fluid rounded mb-5 mt-5" loading="lazy">
+                        <img src="{% static 'images/noimage.jpg' %}" alt="No image available" class="img-fluid rounded mb-5 mt-5" loading="lazy">
                     {% endif %}
                 </div>
                 <div class="col-12 col-md-6 text-center text-md-start">
