--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -36,7 +36,10 @@
           </a>
 
           <p class="mt-3 text-center">
-            <a href="{% url 'account_reset_password' %}">{% trans "Forgot password?" %}</a>
+            <a class="text-decoration-underline link-primary" href="{% url 'account_reset_password' %}">{% trans "Forgot password?" %}</a>
+          </p>
+          <p class="mt-3 text-center">
+            Don't have an account yet? <a class="text-decoration-underline link-primary" href="{% url 'account_signup' %}">Register here</a>.
           </p>
         </div>
       </div>
