--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -42,7 +42,7 @@
           </a>
 
           <p class="mt-3 text-center">
-            <a href="{% url 'account_login' %}">{% trans "Already have an account? Log in." %}</a>
+            Already have an account? <a class="text-decoration-underline link-primary" href="{% url 'account_login' %}">{% trans "Log in." %}</a>
           </p>
         </div>
       </div>
