Add further styling to various account/socialaccount templates

--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -23,7 +23,7 @@
 
           <form method="post" action="">
             {% csrf_token %}
-            <button type="submit" class="btn  w-100">
+            <button type="submit" class="btn allauth-danger-btn w-100 rounded-1 border border-black border-1">
               <i class="fab fa-google me-2"></i> {% trans "Continue with Google" %}
             </button>
           </form>
