--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -3,22 +3,28 @@
 
 {% block page_header %}
 <div class="container mt-5">
-    <div class="row">
-        <div class="col"></div>
-    </div>
+    <div class="row"><div class="col"></div></div>
 </div>
 {% endblock %}
 
 {% block content %}
 <div class="container py-5">
   <div class="row justify-content-center">
-    <div class="col-md-6">
-      <h2 class="mb-4 text-center">{% trans "Reset Password" %}</h2>
-      <form method="post" action="{% url 'account_reset_password' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary w-100">{% trans "Send Reset Link" %}</button>
-      </form>
+    <div class="col-md-6 col-lg-5">
+      <div class="card shadow text-center">
+        <div class="card-body">
+          <h2 class="mb-4">{% trans "Reset Password" %}</h2>
+
+          <p class="text-muted">Please enter the email address associated with your account.</p>
+          <form method="post" action="{% url 'account_reset_password' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn allauth-success-btn w-100 rounded-1 border border-black border-1 mt-3">
+              {% trans "Send Reset Link" %}
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
