--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -16,13 +16,13 @@
           <h2 class="mb-3">{% trans "Complete Sign Up" %}</h2>
           <p class="text-muted">
             {% blocktrans with email=form.email.value %}
-                The Google account <strong>{{ email }}</strong> is not registered on our website.
-                Please create an account to continue.
+                The Google account <strong>{{ email }}</strong> is not yet registered on our website.
+                Please add a Username to continue.
             {% endblocktrans %}
             </p>
 
             <p class="mt-3">
-            {% trans "Already have an account?" %} <a href="{% url 'account_login' %}">{% trans "Log in here." %}</a>
+            {% trans "Already have an account?" %} <a class="text-decoration-underline link-primary" href="{% url 'account_login' %}">{% trans "Log in here." %}</a>
             </p>
 
           <form method="post" action="{% url 'socialaccount_signup' %}">
