Set DEBUG to False

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -53,7 +53,7 @@
               style="max-width: 300px;">
         <button type="submit" class="btn border border-black border-1 newsletter-btn">Subscribe</button>
       </form>
-      <div id="newsletter-success" class="text-success mt-2 d-none">Thanks for subscribing!</div>
+      <div id="newsletter-success" class="mt-2 d-none">Thanks for subscribing!</div>
       <p class="text-muted small mt-2">You can unsubscribe anytime.</p>
       <p class="text-muted small mt-2">© {{ now|date:"Y" }} Pawgress. All rights reserved.</p>
     </div>
