TESTING.md edit: complete 'Validator testing' section; minimal changes in css and templates upon test restults

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -100,7 +100,7 @@
 {% block postloadjs %}
 {{ block.super }}
 
-<script type="text/javascript">
+<script>
     // Remove the course item and reload on click
     $('.remove-item').click(function(e) {
         e.preventDefault();
