--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,7 +34,7 @@
         advanced behaviors, we're here to guide you through every step of your journey.
       </p>
       <div class="mt-3">
-        <a href="https://www.facebook.com/" target="_blank" aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook me-3 fa-2x social-icons"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61575934871651" target="_blank" aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook me-3 fa-2x social-icons"></i></a>
         <a href="https://www.instagram.com/" target="_blank" aria-label="Visit our Instagram page"><i class="fa-brands fa-instagram me-3 fa-2x social-icons"></i></a>
         <a href="https://x.com/?lang=en" target="_blank" aria-label="Visit our X page"><i class="fa-brands fa-x-twitter me-3 fa-2x social-icons"></i></a>
       </div>
